--- a/frontend/README
+++ b/frontend/README
@@ -7,5 +7,6 @@ ADICIONAR QTD EMPENHADA
 ADICIONAR PODER DE 3º
 
 pc 017333, bug/?
+produto 9900000645 bugado
 
 ANALISE ESTOQUE DE MOTORES GERADORES
